# api-spec-enforcer

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: __init__.py  gap-fixer.md  review_agent.py  spec-validator.md
.claude/agents/gap_fixer/: AGENT.md  __init__.py  fix_agent.py
.claude/agents/spec_validator/: __init__.py  code_agent.py  spec_agent.py
.claude/agents/test_generator/: AGENT.md  __init__.py  test_agent.py
.claude/commands/: check_api_compliance.md  enforce.md  fix-gaps.md  fix_missing_endpoints.md  gen-tests.md  generate_api_tests.md  run-agent.md
.claude/skills/openapi-compliance/: SKILL.md
.claudeskills/: api_compliance.md  test_generation.md
agents/: __init__.py  base.py  review_agent.py  spec_agent.py
core/: __init__.py  code_generator.py  compliance_checker.py  fastapi_inspector.py  models.py  openapi_parser.py
mcp/: __init__.py  context_provider.py
scripts/: demo_compliance.py  demo_fix.py  demo_generate_tests.py
services/user_service/: __init__.py  database.py  main.py  routes.py  schemas.py
spec/: non_functional_spec.md  openapi.yaml
tests/: __init__.py  conftest.py  test_compliance.py  test_parser.py
